# repo-archiver

./: Cargo.toml  README.md  archive-old-repos
.github/workflows/: ci.yml
src/: main.rs
