[package]
name = "repo-archiver"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI to archive old GitHub repos"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
